cmake_minimum_required(VERSION 3.28)
project(CSES_SpeedRun)

set(CMAKE_CXX_STANDARD 17)

add_executable(CSES_SpeedRun main.cpp
        "Introductory Problems/Weird Algorithm.cpp"
        "Introductory Problems/Missing Number.cpp"
        "Introductory Problems/Repitions.cpp"
        "Introductory Problems/Increasing Array.cpp"
        "Introductory Problems/Permutations.cpp"
        "Introductory Problems/Number Spiral.cpp"
        "Introductory Problems/Two Knights.cpp"
        "Introductory Problems/Two Sets.cpp"
        "Introductory Problems/Bit Strings.cpp"
        "Introductory Problems/Trailing Zeros.cpp"
        "Introductory Problems/Coin Piles.cpp"
        "Introductory Problems/Palindrome Reorder.cpp"
        "Introductory Problems/Gray Code.cpp"
        "Introductory Problems/Tower of Hanoi.cpp"
        "Introductory Problems/Creating Strings.cpp"
        "Introductory Problems/Apple Division.cpp"
        "Introductory Problems/Chessboard and Queens.cpp"
        "Introductory Problems/Digit Queries.cpp"
        "Dynamic Programming/Dice Combinations.cpp"
        "Dynamic Programming/Minimizing Coins.cpp"
        "Dynamic Programming/Coin Combinations I.cpp"
        "Dynamic Programming/Coin Combinatrics II.cpp"
        "Dynamic Programming/Removing Digits.cpp"
        "Dynamic Programming/Removing Digits.cpp"
        "Dynamic Programming/Removing Digits.cpp"
        "Dynamic Programming/Grid Paths.cpp"
        "Dynamic Programming/Book Shop.cpp"
        "Dynamic Programming/Array Description.cpp"
        "Dynamic Programming/Counting Towers.cpp"
        "Dynamic Programming/Edit Distance.cpp"
)
